# humans-for-housing-video-player

./: INSTALL.md  README.md  humans-for-housing-video-player.service  install.sh  pyproject.toml
.github/workflows/: ci.yml
humans_for_housing_video_player/: __init__.py  main.py
movies/: HFHEXHIBIT_VIDEO_01_LOOP.mov
tests/: __init__.py  test_main.py
